fixed copyright text size on mobile

--- a/styles/components/Footer.module.css
+++ b/styles/components/Footer.module.css
@@ -56,6 +56,6 @@
   }
 
   .mm__copyright {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 }
